Bugzilla bug 113740: do not use the 32-bit SPARC assembly implementation of PRStack because it may cause starvation of the lock owner, leaving the other threads spinning trying to acquire the lock. Modified files: configure configure.in pr/include/md/_solaris.h